--- a/com.qzandronum.Q-Zandronum.yaml
+++ b/com.qzandronum.Q-Zandronum.yaml
@@ -85,7 +85,7 @@ modules:
     config-opts:
       - -DCMAKE_SKIP_RPATH=true
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
-      - -DQT_PACKAGE=Qt6
+      - -DQt_PACKAGE=Qt6
     sources:
       - type: archive
         url: https://bitbucket.org/Doomseeker/doomseeker/get/1.5.1.tar.bz2
