--- a/com.qzandronum.Q-Zandronum.yaml
+++ b/com.qzandronum.Q-Zandronum.yaml
@@ -47,7 +47,7 @@ modules:
 
   - name: fluidsynth1
     buildsystem: cmake-ninja
-    disabled: true
+    disabled: false
     config-opts:
       - -DCMAKE_BUILD_TYPE=RelWithDebInfo
       - -DLIB_SUFFIX=
