--- a/com.qzandronum.Q-Zandronum.yaml
+++ b/com.qzandronum.Q-Zandronum.yaml
@@ -53,6 +53,7 @@ modules:
       - -DLIB_SUFFIX=
       - -DCMAKE_EXE_LINKER_FLAGS=-lncurse
       - -DCMAKE_SHARED_LINKER_FLAGS=-lncurses
+      - -Denable-jack=OFF
     sources:
       - type: archive
         url: https://github.com/FluidSynth/fluidsynth/archive/refs/tags/v1.1.11.tar.gz
